--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,19 +2,34 @@
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 13px;
+    color: @color7;
 }
 
 window#waybar {
-    background-color: rgba(43, 48, 59, 0.5);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
-    transition-property: background-color;
-    transition-duration: .5s;
+    /*background-color: rgba(43, 48, 59, 0.5);*/
+    /*border-bottom: 3px solid rgba(100, 114, 125, 0.5);*/
+    /*color: #ffffff;*/
+    /*transition-property: background-color;*/
+    /*transition-duration: .5s;*/
+    background: transparent;
 }
 
+.modules-left, .modules-center, .modules-right {
+	margin: 7px;
+	margin-bottom: 0;
+}
+
+.module {
+	border-radius: 24px;
+	padding: 4px;
+	background: linear-gradient(145deg, @color3 30%, @color4 100%);
+}
+
+/*
 window#waybar.hidden {
     opacity: 0.2;
 }
+*/
 
 /*
 window#waybar.empty {
@@ -25,43 +40,79 @@ window#waybar.solo {
 }
 */
 
+/*
 window#waybar.termite {
     background-color: #3F3F3F;
 }
+*/
 
+/*
 window#waybar.chromium {
     background-color: #000000;
     border: none;
 }
+*/
 
+/* Use box-shadow instead of border so the text isn't offset */
+/* Avoid rounded borders under each button name */
+/*
 button {
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-    /* Avoid rounded borders under each button name */
+    box-shadow: inset 0 3px transparent;
     border: none;
     border-radius: 0;
 }
+*/
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
+/*
 button:hover {
     background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 3px #ffffff;
 }
+*/
 
+/*
 #workspaces button {
     padding: 0 5px;
     background-color: transparent;
     color: #ffffff;
 }
+*/
 
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+#workspaces button {
+	border: none;
+	margin: 0 1px;
+	border-radius: 24px;
 }
 
-#workspaces button.focused {
-    background-color: #64727D;
+/*
+#workspaces button:hover {
     box-shadow: inset 0 -3px #ffffff;
 }
+*/
+
+#workspaces button:hover {
+	background: alpha(@color7, 0.25);
+}
+
+button:hover {
+	box-shadow: inherit;
+	text-shadow: inherit;
+	background: inherit;
+}
+/*
+#workspaces button.focused {
+    background-color: #64727D;
+    box-shadow: inset 0 -3px #ede028;
+}
+*/
+
+/*
+#workspaces button.visible {
+    background-color: #e2c74a;
+    box-shadow: inset 0 3px #e2c74a;
+}
+*/
 
 #workspaces button.urgent {
     background-color: #eb4d4b;
@@ -98,14 +149,18 @@ button:hover {
 }
 
 /* If workspaces is the leftmost module, omit left margin */
+/*
 .modules-left > widget:first-child > #workspaces {
     margin-left: 0;
 }
+*/
 
 /* If workspaces is the rightmost module, omit right margin */
+/*
 .modules-right > widget:last-child > #workspaces {
     margin-right: 0;
 }
+*/
 
 #clock {
     background-color: #64727D;
@@ -190,6 +245,21 @@ label:focus {
     background-color: #66cc99;
     color: #2a5c45;
     min-width: 100px;
+}
+
+#custom-networktraffic {
+    background-color: #2980b9;
+}
+
+#workspaces {
+    background-color: #babda0;
+}
+
+
+#workspaces .active {
+	font-weight: bold;
+	color: #ffffff;
+	background: alpha(@color7, 0.25);
 }
 
 #custom-media.custom-spotify {
